/*
 * Copyright 2013 Square Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package squareup.protos.edgecases;

option java_package = "com.squareup.wire.protos.edgecases";

message NoFields {
}

message OneField {
  optional int32 opt_int32 = 1;
}

message OneBytesField {
  optional bytes opt_bytes = 1;
}

message Recursive {
  optional int32 value = 1;
  optional Recursive recursive = 2;
}
